# ltfat

./: CMakeLists.txt
auditory/: audgauss.m  audspace.m  audtofreq.m  erbgauss.m  freqscalegauss.m  freqtoaud.m  linloggauss.m
comp/: arg_freqtoaud.m  assert_filterbankinput.m  comp_analytic.m  comp_anarep.m  comp_dqtfd.m  comp_fftanalytic.m  comp_iaf.m  comp_instcm.m  comp_quadratictfdist.m
demos/: demo_introframes.m  demo_linexp.m  tutor_introframes.m
filterbank/: cqt.m  filterbankdual.m  iabsfilterbank.m  iabsfilterbankreal.m  ifilterbank.m  ifilterbankiter.m  linexp.m  linlog.m
fourier/: Contents.m  Disfrct.m  Disfrst.m  cdpei.m  dfft.m  dfftapprox.m  fftanalytic.m  hermbasis.m  middlepad.m  pfilt.m  pgauss.m  psech.m  rescale.m  testfrct.m  testfrft.m
mat2doc/: project.bib
mex/: comp_fwt_all.mexw64  comp_ifwt_all.mexw64
nonstatgab/: nsdgt.m  nsdgtreal.m
quadratic/: Contents.m  af.m  ambiguityfunction.m  bornjordandist.m  choiwilliamsdist.m  daf.m  dbjd.m  dcaf.m  dcwd.m  dcwvd.m  dmhd.m  dqtfd.m  drd.m  drihaczekdist.m  dwvd.m  freqmar.m  iaf.m  instaucorr.m  moyal.m  plottfd.m  quadratictfdist.m  timemar.m  wd.m  wignervilledist.m
reference/: ref_daf.m  ref_drd.m  ref_dwvd.m
src/: CMakeLists.txt  Makefile
testing/: test_all_ltfat.m  test_cqt.m  test_daf.m  test_dfft.m  test_drd.m  test_dwvd.m  test_filterbank.m  test_hermbasis.m  test_ifilterbankiter.m  test_nsdgt.m
yawtb/: Contents.m  cleanit.py  cutfromcleanit.py  print_header.py  yaload.m  yawtbinit.m  yawtbprefs.m
yawtb/continuous/: cwt1dt.m  yashow_cwt1d.m
yawtb/tools/help/: yahelp.m  (+1 more)
(+4 files in other folders)
